Functionality and style fixes for Special:UserBoxes
Fix "Left side" <input> overlapping with the "Right side" input on Special:UserBoxes.

Fix the "Add an image" link (and other JS, presumably) on Special:UserBoxes by wrapping the code in FanBoxes.js inside a closure.

--- a/resources/css/SpecialFanBoxes.css
+++ b/resources/css/SpecialFanBoxes.css
@@ -82,6 +82,10 @@ input[name="countdown"] {
 	width: 350px;
 }
 
+#inputLeftSide {
+	width: 85%;
+}
+
 #inputRightSide {
 	width: 350px;
 }
